--- a/index.html
+++ b/index.html
@@ -6,89 +6,92 @@
     <title>WEBSTUDIO</title>
   </head>
   <body>
-    <header>
-      <a href="WEBSTUDIO">WEBSTUDIO</a>
+    <header>      
       <nav>
-        <ul>
-          <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li><a href="Contacts">Contacts</a></li>
-        </ul>
+        <a href="./index.html">WebStudio</a>
+         <ul>
+           <li><a href="Studio">Studio</a></li>
+           <li><a href="Portfolio">Portfolio</a></li>
+           <li><a href="Contacts">Contacts</a></li>
+         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-        <a href="tel:+110001111111">+110001111111</a>
+        <ul>
+          <li>
+           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+           <a href="tel:+110001111111">+11 (000) 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </header>
-    <main>          
-      <div class="wrapper">
-        <div><h1>Effective Solutions for Your Business</h1></div>          
-        <button type="submit">Order Service</button>
-      </div>      
-      <section class="features">
-        <div class="wrapper">        
-         <div class="features-item">                           
-          <h2>Strategy</h2>
-          <p>Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.</p>
-         </div>
-         <div class="features-item">                           
-          <h2>Punctuality</h2>
-          <p>Bring the key message to the brand's audience for the best price
-          within the shortest possible time.</p> 
-         </div>        
-         <div class="features-item">              
-          <h2>Diligence</h2>
-          <p>Research and confirm brands that present the strongest digital
-          growth opportunities and minimize risk.</p>  
-         </div>         
-         <div class="features-item">   
-          <h2>Technologies</h2>
-          <p>Design practice focused on digital experiences. We bring forth a
-          deep passion for problem-solving.</p>               
-         </div>   
-       </div>     
+    <main> 
+      <section>
+       <h1>Effective Solutions for Your Business</h1>                      
+       <button type="button">Order Service</button>
+      </section>     
+      <section>
+       <h2>features</h2>
+        <ul>        
+          <li>                          
+           <h3>Strategy</h3>
+           <p>Our goal is to identify the business problem to walk away with the
+           perfect and creative solution.</p>
+          </li>
+          <li>                           
+           <h3>Punctuality</h3>
+           <p>Bring the key message to the brand's audience for the best price
+           within the shortest possible time.</p> 
+          </li>        
+          <li>              
+           <h3>Diligence</h3>
+           <p>Research and confirm brands that present the strongest digital
+           growth opportunities and minimize risk.</p>  
+          </li>         
+          <li>   
+           <h3>Technologies</h3>
+           <p>Design practice focused on digital experiences. We bring forth a
+           deep passion for problem-solving.</p>               
+          </li>   
+       </ul>     
       </section>
-      <section class="team">        
-        <div class="wrapper"> 
-            <h2>Our team</h2>                     
-            <div class="team">
-               <img src="C:/Users/User/progects/goit-markup-hw-01/images/img1.jpg"
-               alt="foto1"
-               width="264"
-               height="260" > 
-               <h2>Mark Guerrero</h2>
-               <p>Product Designer</p>
-            </div>                       
-            <div class="team">
-               <img src="C:/Users/User/progects/goit-markup-hw-01/images/img2.jpg"
-               alt="foto2"
-               width="264"
-               height="260" >    
-               <h2>Tom Ford</h2>
-               <p>Frontend Developer</p>                    
-            </div>            
-            <div class="team">
-               <img src="C:/Users/User/progects/goit-markup-hw-01/images/img3.jpg"
-               alt="foto3"
-               width="264"
-               height="260" >  
-               <h2>Camila Garcia</h2>
-               <p>Marketing</p>                    
-            </div>             
-            <div class="team">
-               <img src="C:/Users/User/progects/goit-markup-hw-01/images/img4.jpg"
-               alt="foto4"
-               width="264"
-               height="260" >    
-               <h2>Daniel Wilson</h2>  
-               <p>UI Designer</p>                  
-            </div>                      
-        </div>
+      <section>        
+        <h2>Our team</h2>                     
+        <ul>
+          <li>
+            <img src="./images/img1.jpg"
+            alt="teamcard1"
+            width="264"> 
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>                       
+          <li>
+            <img src="./images/img2.jpg"
+            alt="teamcard2"
+            width="264">    
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>                    
+          </li>            
+          <li>
+            <img src="./images/img3.jpg"
+            alt="teamcard3"
+            width="264">  
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>                    
+          </li>             
+          <li>
+            <img src="./images/img4.jpg"
+            alt="teamcard4"
+            width="264">    
+            <h3>Daniel Wilson</h3>  
+            <p>UI Designer</p>                  
+          </li>                      
+        </ul>
       </section>
     </main>
     <footer>      
-        <a href="WEBSTUDIO">WEBSTUDIO</a>        
+        <a href="./index.html">WebStudio</a>        
           <p>
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
