--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-           <a href="tel:+110001111111">+11 (000) 111 11 11</a>
+           <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -57,7 +57,7 @@
        </ul>     
       </section>
       <section>        
-        <h2>Our team</h2>                     
+        <h2>Our Team</h2>                     
         <ul>
           <li>
             <img src="./images/img1.jpg"
