--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
         <h2>Our Team</h2>                     
         <ul>
           <li>
-            <img src="./images/img1.jpg"
+            <img src="images/img1.jpg"
             alt="teamcard1"
             width="264"> 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>                       
           <li>
-            <img src="./images/img2.jpg"
+            <img src="images/img2.jpg"
             alt="teamcard2"
             width="264">    
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>                    
           </li>            
           <li>
-            <img src="./images/img3.jpg"
+            <img src="images/img3.jpg"
             alt="teamcard3"
             width="264">  
             <h3>Camila Garcia</h3>
             <p>Marketing</p>                    
           </li>             
           <li>
-            <img src="./images/img4.jpg"
+            <img src="images/img4.jpg"
             alt="teamcard4"
             width="264">    
             <h3>Daniel Wilson</h3>  
